updated augmentation file and added new ack_aug.py file

--- a/etd_segmentation/ETDaugmentation.ipynb
+++ b/etd_segmentation/ETDaugmentation.ipynb
@@ -53,19 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Preprocessor:\n",
-    "    def __init__(self, json_files):\n",
-    "        self.json_files = json_files\n",
-    "        #self.dedication_ = dedication_\n",
-    "        #self.acknowledgement_ = acknowledgement_\n",
-    "        #self.general_abs = general_abs\n",
     "    \n",
     "    ## the function will return parsed lines from json files\n",
-    "    def json_text_parser(self):\n",
+    "    def json_text_parser(self, json_files):\n",
+    "        self.json_files = json_files\n",
     "        counter = 0\n",
     "        list_line = []\n",
     "        for filename in self.json_files:\n",
@@ -83,7 +79,8 @@
     "        return list_line\n",
     "    \n",
     "    ## the function will return parsed bounding box information from json files\n",
-    "    def json_bbox_parser(self):\n",
+    "    def json_bbox_parser(self, json_files):\n",
+    "        self.json_files = json_files\n",
     "        counter = 0\n",
     "        list_bbox = []\n",
     "        for filename in self.json_files:\n",
@@ -142,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,50 +193,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file = 'Label-Abstract/20.png' ## need to modify when text will be rendered as an image\n",
-    "W,H = (2360, 3200)\n",
-    "def text_on_img(text, size):\n",
-    "    font = ImageFont.truetype('NimbusMonoPS-Bold.otf', size)\n",
-    "    image = Image.new(mode = \"RGB\", size = (W, H), color = \"white\")\n",
-    "    draw = ImageDraw.Draw(image)\n",
-    "    w, h = draw.textsize(text)\n",
-    "    \n",
-    "    ## Adjust the texual position in a page and draw the text on a image\n",
-    "    '''\n",
-    "    dedication -- 10 width and height 6; \n",
-    "    ack -- 15 width and 6 height; \n",
-    "    gabs -- 13 width and height 16\n",
-    "    abstract -- 20 width and height 6\n",
-    "    \n",
-    "    '''\n",
-    "    draw.text(((W-w)/20,(H-h)/6), text, font=font, fill=(0,0,0), spacing=60)\n",
-    "    image.save(file)\n",
-    "\n",
-    "    return image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    \n",
-    "#     parser = Preprocessor(etd_path)\n",
+    "    parser = Preprocessor()\n",
     "    \n",
-    "#     etd_lines = parser.json_text_parser()\n",
-    "#     etd_bbox = parser.json_bbox_parser()\n",
-    "#     labels_ = pd.read_csv(\"labels.csv\", encoding = 'utf-8')\n",
-    "#     etd_label = labels_['labels']\n",
-    "#     file_id = labels_['file_id']\n",
-    "#     res_list = [list(item) for item in list(zip(file_id, etd_lines, etd_bbox, etd_label))]\n",
-    "#     dataframe = pd.DataFrame(res_list, columns = ['file_idx', 'text', 'bbox', 'class'])\n",
-    "#     dataframe.to_csv('ETD_aug.csv', index = False)\n",
+    "    etd_lines = parser.json_text_parser(etd_path)\n",
+    "    etd_bbox = parser.json_bbox_parser(etd_path)\n",
+    "    labels_ = pd.read_csv(\"labels.csv\", encoding = 'utf-8')\n",
+    "    etd_label = labels_['labels']\n",
+    "    file_id = labels_['file_id']\n",
+    "    res_list = [list(item) for item in list(zip(file_id, etd_lines, etd_bbox, etd_label))]\n",
+    "    dataframe = pd.DataFrame(res_list, columns = ['file_idx', 'text', 'bbox', 'class'])\n",
+    "    dataframe.to_csv('ETD_aug.csv', index = False)\n",
     "#     df1 = pd.read_csv('ETD_aug.csv')\n",
     "    \n",
     "#     df1.set_index(\"class\", inplace = True)\n",
@@ -253,15 +222,7 @@
     "#     dedication_paraphrase = augmentation.paraphrased_text(dedication)\n",
     "#     dedication_text_wrap = augmentation.wrap_text(dedication_paraphrase)\n",
     "#     dedication_title = \"\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tDedication\\n\" + dedication_text_wrap\n",
-    "    \n",
-    "#     ## Acknowledgement ##\n",
-    "#     label_ack = df1.loc[\"Label-Acknowledgement\"]\n",
-    "#     phrases_ack = label_ack['text']\n",
-    "#     ack = parser.preprocess_ack(phrases_ack[2]) ## change the index values which corresponds to different ETD samples\n",
-    "#     ack_paraphrase = augmentation.paraphrased_text(ack)\n",
-    "#     ack_text_wrap = augmentation.wrap_text(ack_paraphrase)\n",
-    "#     ack_title = \"\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tACKNOWLEDGEMENTS\\n\" + ack_text_wrap\n",
-    "#     #print(ack_title)\n",
+    "\n",
     "       \n",
     "#     ## General Abstract ##\n",
     "#     label_gabs = df1.loc[\"Label-GeneralAbstract\"]\n",
@@ -288,22 +249,22 @@
     "    \n",
     "    #text_on_img(abs_title,40) ## dedication -- 43, ack and abstract - 40, gabs -- 38\n",
     "    \n",
-    "    '''For now we need to change the directory for each class label'''\n",
+    "#    '''For now we need to change the directory for each class label'''\n",
     "    ##image augmentation\n",
-    "    seq = iaa.Sequential([\n",
-    "        iaa.Affine(rotate=(-6, 6)),\n",
-    "        iaa.AdditiveGaussianNoise(scale=(10, 50)),\n",
-    "        iaa.SaltAndPepper(p=0.1),\n",
-    "        iaa.GaussianBlur(sigma=0.5),\n",
-    "        iaa.LinearContrast(alpha=1),\n",
-    "        iaa.PerspectiveTransform(scale=0.025, keep_size=True)\n",
-    "    ], random_order = True)\n",
+    "#     seq = iaa.Sequential([\n",
+    "#         iaa.Affine(rotate=(-6, 6)),\n",
+    "#         iaa.AdditiveGaussianNoise(scale=(10, 50)),\n",
+    "#         iaa.SaltAndPepper(p=0.1),\n",
+    "#         iaa.GaussianBlur(sigma=0.5),\n",
+    "#         iaa.LinearContrast(alpha=1),\n",
+    "#         iaa.PerspectiveTransform(scale=0.025, keep_size=True)\n",
+    "#     ], random_order = True)\n",
     "    \n",
-    "    img_path_dedication = sorted(glob.glob('/home/mchou001/Label-Abstract/*.png'), key = numericalSort)\n",
-    "    for n, images in enumerate(img_path_dedication[0:20]):\n",
-    "        for n in range(6):\n",
-    "            aug_image = seq(image=cv2.imread(images))\n",
-    "            cv2.imwrite('/home/mchou001/Label-Abstract/aug_images/aug{}.png'.format(n),aug_image)"
+    "#     img_path_dedication = sorted(glob.glob('/home/mchou001/Label-Abstract/*.png'), key = numericalSort)\n",
+    "#     for n, images in enumerate(img_path_dedication[0:20]):\n",
+    "#         for n in range(6):\n",
+    "#             aug_image = seq(image=cv2.imread(images))\n",
+    "#             cv2.imwrite('/home/mchou001/Label-Abstract/aug_images/aug{}.png'.format(n),aug_image)"
    ]
   },
   {
