modified ack-aug and ack_img_aug scripts and added labels with the augmented path file

--- a/etd_segmentation/label-ack_aug.ipynb
+++ b/etd_segmentation/label-ack_aug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ack_aug(ack_text_title):\n",
+    "    for row in ack_text_title:\n",
+    "        fileName = (\"Label-Acknowledgement/%d.png\" % (len(row)))\n",
+    "        save_image = text_on_img(fileName, row, 40) ## dedication -- 43, ack and abstract - 40, gabs -- 38\n",
+    "    \n",
+    "    return save_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -113,32 +127,15 @@
     "    phrases_ack = label_ack['text']\n",
     "    \n",
     "    ack = list_of_phrases(phrases_ack)\n",
-    "    "
+    "    \n",
+    "    ack_text = list_of_ack(ack)\n",
+    "    \n",
+    "    ack_text_aug = ack_aug(ack_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ack_text = list_of_ack(ack)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for row in ack_text:\n",
-    "    fileName = (\"Label-Acknowledgement/%d.png\" % (len(row)))\n",
-    "    text_on_img(fileName, row, 40)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -150,14 +147,23 @@
     }
    ],
    "source": [
-    "dir_path = '/home/mchou001/Label-Acknowledgement/'\n",
-    "count = 0\n",
-    "# Iterate directory\n",
-    "for path in os.listdir(dir_path):\n",
-    "    # check if current path is a file\n",
-    "    if os.path.isfile(os.path.join(dir_path, path)):\n",
-    "        count += 1\n",
-    "print('File count:', count)"
+    "# dir_path = '/home/mchou001/Label-Acknowledgement/'\n",
+    "# count = 0\n",
+    "# # Iterate directory\n",
+    "# for path in os.listdir(dir_path):\n",
+    "#     # check if current path is a file\n",
+    "#     if os.path.isfile(os.path.join(dir_path, path)):\n",
+    "#         count += 1\n",
+    "# print('File count:', count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!zip -r aug_image.zip Label-Acknowledgement"
    ]
   },
   {
