--- a/etd_segmentation/label-ack_img_aug.ipynb
+++ b/etd_segmentation/label-ack_img_aug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,63 +49,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "img_path = sorted(glob.glob('/home/mchou001/Label-Acknowledgement/*.png'), key = numericalSort)\n",
     "\n",
     "lower = 0\n",
-    "upper = 800\n",
+    "upper = 1000\n",
     "while lower < upper:\n",
     "    for n, images in enumerate(img_path[0:]):\n",
     "        aug_image = seq(image=cv2.imread(images))\n",
-    "        cv2.imwrite('/home/mchou001/Label-Acknowledgement/501-test/aug{}.png'.format(lower),aug_image)\n",
+    "        cv2.imwrite('/home/mchou001/Label-Acknowledgement/501/aug{}.png'.format(lower),aug_image)\n",
     "        lower += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File count: 783\n"
-     ]
-    }
-   ],
-   "source": [
-    "dir_path = '/home/mchou001/Label-Acknowledgement/501-test'\n",
-    "count = 0\n",
-    "# Iterate directory\n",
-    "for path in os.listdir(dir_path):\n",
-    "    # check if current path is a file\n",
-    "    if os.path.isfile(os.path.join(dir_path, path)):\n",
-    "        count += 1\n",
-    "print('File count:', count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_path = sorted(glob.glob('/home/mchou001/Label-Acknowledgement/501-test*.png'), key = numericalSort)\n",
+    "image_path = sorted(glob.glob('/home/mchou001/Label-Acknowledgement/501/*.png'), key = numericalSort)\n",
     "\n",
     "df = pd.DataFrame(image_path, columns = ['filename'])\n",
+    "df['class'] = np.nan\n",
+    "df = df.fillna(\"Label-Acknowledgement\")\n",
     "df.to_csv('ack_img_aug.csv', encoding = 'utf-8', index= None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/501/aug0.png</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/501/aug1.png</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/501/aug2.png</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/501/aug3.png</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/501/aug4.png</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1312</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/501/aug13...</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1313</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/501/aug13...</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1314</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/501/aug13...</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1315</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/501/aug13...</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1316</th>\n",
+       "      <td>/home/mchou001/Label-Acknowledgement/501/aug13...</td>\n",
+       "      <td>Label-Acknowledgement</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1317 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               filename                  class\n",
+       "0     /home/mchou001/Label-Acknowledgement/501/aug0.png  Label-Acknowledgement\n",
+       "1     /home/mchou001/Label-Acknowledgement/501/aug1.png  Label-Acknowledgement\n",
+       "2     /home/mchou001/Label-Acknowledgement/501/aug2.png  Label-Acknowledgement\n",
+       "3     /home/mchou001/Label-Acknowledgement/501/aug3.png  Label-Acknowledgement\n",
+       "4     /home/mchou001/Label-Acknowledgement/501/aug4.png  Label-Acknowledgement\n",
+       "...                                                 ...                    ...\n",
+       "1312  /home/mchou001/Label-Acknowledgement/501/aug13...  Label-Acknowledgement\n",
+       "1313  /home/mchou001/Label-Acknowledgement/501/aug13...  Label-Acknowledgement\n",
+       "1314  /home/mchou001/Label-Acknowledgement/501/aug13...  Label-Acknowledgement\n",
+       "1315  /home/mchou001/Label-Acknowledgement/501/aug13...  Label-Acknowledgement\n",
+       "1316  /home/mchou001/Label-Acknowledgement/501/aug13...  Label-Acknowledgement\n",
+       "\n",
+       "[1317 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   }
  ],
  "metadata": {
