new augmented filesadded and modified previous versions for ack

--- a/etd_segmentation/src/augmentation/ETDaugmentation.ipynb
+++ b/etd_segmentation/src/augmentation/ETDaugmentation.ipynb
@@ -22,10 +22,7 @@
     "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
     "import torch\n",
     "import textwrap\n",
-    "from PIL import Image, ImageDraw, ImageFont\n",
-    "from imgaug import augmenters as iaa\n",
-    "import imgaug as ia\n",
-    "import cv2"
+    "from PIL import Image, ImageDraw, ImageFont"
    ]
   },
   {
@@ -209,20 +206,6 @@
     "    res_list = [list(item) for item in list(zip(file_id, etd_lines, etd_bbox, etd_label))]\n",
     "    dataframe = pd.DataFrame(res_list, columns = ['file_idx', 'text', 'bbox', 'class'])\n",
     "    dataframe.to_csv('ETD_aug.csv', index = False)\n",
-    "#     df1 = pd.read_csv('ETD_aug.csv')\n",
-    "    \n",
-    "#     df1.set_index(\"class\", inplace = True)\n",
-    "    \n",
-    "#     augmentation = Augmentation()\n",
-    "    \n",
-    "#     ## Dedication ###\n",
-    "#     label_dedication = df1.loc[\"Label-Dedication\"]\n",
-    "#     phrases_dedication = label_dedication['text']\n",
-    "#     dedication = parser.preprocess_dedication(phrases_dedication[2])  ## change the index values which corresponds to different ETD samples\n",
-    "#     dedication_paraphrase = augmentation.paraphrased_text(dedication)\n",
-    "#     dedication_text_wrap = augmentation.wrap_text(dedication_paraphrase)\n",
-    "#     dedication_title = \"\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tDedication\\n\" + dedication_text_wrap\n",
-    "\n",
     "       \n",
     "#     ## General Abstract ##\n",
     "#     label_gabs = df1.loc[\"Label-GeneralAbstract\"]\n",
@@ -245,41 +228,8 @@
     "#     abstract_text_wrap = augmentation.wrap_text(abstract_paraphrase)\n",
     "#     #print(abstract_text_wrap)\n",
     "#     abs_title = \"\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tAbstract\\n\" + abstract_text_wrap\n",
-    "    \n",
-    "    \n",
-    "    #text_on_img(abs_title,40) ## dedication -- 43, ack and abstract - 40, gabs -- 38\n",
-    "    \n",
-    "#    '''For now we need to change the directory for each class label'''\n",
-    "    ##image augmentation\n",
-    "#     seq = iaa.Sequential([\n",
-    "#         iaa.Affine(rotate=(-6, 6)),\n",
-    "#         iaa.AdditiveGaussianNoise(scale=(10, 50)),\n",
-    "#         iaa.SaltAndPepper(p=0.1),\n",
-    "#         iaa.GaussianBlur(sigma=0.5),\n",
-    "#         iaa.LinearContrast(alpha=1),\n",
-    "#         iaa.PerspectiveTransform(scale=0.025, keep_size=True)\n",
-    "#     ], random_order = True)\n",
-    "    \n",
-    "#     img_path_dedication = sorted(glob.glob('/home/mchou001/Label-Abstract/*.png'), key = numericalSort)\n",
-    "#     for n, images in enumerate(img_path_dedication[0:20]):\n",
-    "#         for n in range(6):\n",
-    "#             aug_image = seq(image=cv2.imread(images))\n",
-    "#             cv2.imwrite('/home/mchou001/Label-Abstract/aug_images/aug{}.png'.format(n),aug_image)"
+    " "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
