--- a/etd_segmentation/src/augmentation/label-ack_aug.ipynb
+++ b/etd_segmentation/src/augmentation/label-ack_aug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,11 +15,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## This function is taking all the acknowledgement text, processing it, and then calling paraphrasing model to\n",
+    "## perform text based Augmentation\n",
+    "\n",
     "def list_of_phrases(phrases):\n",
     "    \n",
     "    phrases_list = []\n",
     "    \n",
-    "    for text in phrases_ack:\n",
+    "    for text in phrases:\n",
     "        ack = parser.preprocess_ack(text)\n",
     "        ack_paraphrase = augmentation.paraphrased_text(ack)\n",
     "        ack_list = [ack_paraphrase]\n",
@@ -30,13 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## This function is taking all the augmented text and wrapping it so that it can fit into the page\n",
+    "## it also adds heading to the top of the page\n",
+    "\n",
     "def list_of_ack(ack_text):\n",
     "    list_ack = []\n",
-    "    for text in ack:\n",
+    "    for text in ack_text:\n",
     "        for row in text:\n",
     "            ack_text_wrap = augmentation.wrap_text(row)\n",
     "            ack_title = \"\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tACKNOWLEDGEMENTS\\n\" + ack_text_wrap\n",
@@ -47,10 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## This function is taking all the text and saving it on an empty image\n",
+    "## we are choosing text font and text size \n",
+    "\n",
     "W,H = (2360, 3200)\n",
     "def text_on_img(fileName, text, size):\n",
     "    font = ImageFont.truetype('NimbusMonoPS-Bold.otf', size)\n",
@@ -74,13 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## This function is calling text_on_image function and save the image to the directory\n",
     "def ack_aug(ack_text_title):\n",
-    "    for row in ack_text_title:\n",
-    "        fileName = (\"Label-Acknowledgement/%d.png\" % (len(row)))\n",
+    "    for n, row in enumerate(ack_text_title):\n",
+    "        fileName = (\"/home/mchou001/Label-Acknowledgement/aug_text{}.png\".format(n))\n",
     "        save_image = text_on_img(fileName, row, 40) ## dedication -- 43, ack and abstract - 40, gabs -- 38\n",
     "    \n",
     "    return save_image"
@@ -88,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -135,26 +145,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File count: 439\n"
+      "File count: 543\n"
      ]
     }
    ],
    "source": [
-    "# dir_path = '/home/mchou001/Label-Acknowledgement/'\n",
-    "# count = 0\n",
-    "# # Iterate directory\n",
-    "# for path in os.listdir(dir_path):\n",
-    "#     # check if current path is a file\n",
-    "#     if os.path.isfile(os.path.join(dir_path, path)):\n",
-    "#         count += 1\n",
-    "# print('File count:', count)"
+    "dir_path = '/home/mchou001/Label-Acknowledgement/'\n",
+    "count = 0\n",
+    "# Iterate directory\n",
+    "for path in os.listdir(dir_path):\n",
+    "    # check if current path is a file\n",
+    "    if os.path.isfile(os.path.join(dir_path, path)):\n",
+    "        count += 1\n",
+    "print('File count:', count)"
    ]
   },
   {
