--- a/etd_segmentation/src/augmentation/label-dedication_img_aug.ipynb
+++ b/etd_segmentation/src/augmentation/label-dedication_img_aug.ipynb
@@ -53,14 +53,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_path = sorted(glob.glob('/home/mchou001/Label-Acknowledgement/*.png'), key = numericalSort)\n",
+    "img_path = sorted(glob.glob('/home/mchou001/Label-Dedication/*.png'), key = numericalSort)\n",
     "\n",
     "lower = 0\n",
     "upper = 1000\n",
     "while lower < upper:\n",
     "    for n, images in enumerate(img_path[0:]):\n",
     "        aug_image = seq(image=cv2.imread(images))\n",
-    "        cv2.imwrite('/home/mchou001/Label-Acknowledgement/501/aug{}.png'.format(lower),aug_image)\n",
+    "        cv2.imwrite('/home/mchou001/Label-Dedication/502/aug{}.png'.format(lower),aug_image)\n",
     "        lower += 1"
    ]
   },
@@ -70,12 +70,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_path = sorted(glob.glob('/home/mchou001/Label-Acknowledgement/501/*.png'), key = numericalSort)\n",
+    "image_path = sorted(glob.glob('/home/mchou001/Label-Dedication/502/*.png'), key = numericalSort)\n",
     "\n",
     "df = pd.DataFrame(image_path, columns = ['filename'])\n",
     "df['class'] = np.nan\n",
-    "df = df.fillna(\"Label-Acknowledgement\")\n",
-    "df.to_csv('ack_img_aug.csv', encoding = 'utf-8', index= None)"
+    "df = df.fillna(\"Label-Dedication\")\n",
+    "df.to_csv('dedication_img_aug.csv', encoding = 'utf-8', index= None)"
    ]
   },
   {
@@ -111,28 +111,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug0.png</td>\n",
-       "      <td>Label-Acknowledgement</td>\n",
+       "      <td>/home/mchou001/Label-Dedication/502/aug0.png</td>\n",
+       "      <td>Label-Dedication</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug1.png</td>\n",
-       "      <td>Label-Acknowledgement</td>\n",
+       "      <td>/home/mchou001/Label-Dedication/502/aug1.png</td>\n",
+       "      <td>Label-Dedication</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug2.png</td>\n",
-       "      <td>Label-Acknowledgement</td>\n",
+       "      <td>/home/mchou001/Label-Dedication/502/aug2.png</td>\n",
+       "      <td>Label-Dedication</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug3.png</td>\n",
-       "      <td>Label-Acknowledgement</td>\n",
+       "      <td>/home/mchou001/Label-Dedication/502/aug3.png</td>\n",
+       "      <td>Label-Dedication</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug4.png</td>\n",
-       "      <td>Label-Acknowledgement</td>\n",
+       "      <td>/home/mchou001/Label-Dedication/502/aug4.png</td>\n",
+       "      <td>Label-Dedication</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -140,50 +140,50 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1312</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug13...</td>\n",
-       "      <td>Label-Acknowledgement</td>\n",
+       "      <th>996</th>\n",
+       "      <td>/home/mchou001/Label-Dedication/502/aug996.png</td>\n",
+       "      <td>Label-Dedication</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1313</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug13...</td>\n",
-       "      <td>Label-Acknowledgement</td>\n",
+       "      <th>997</th>\n",
+       "      <td>/home/mchou001/Label-Dedication/502/aug997.png</td>\n",
+       "      <td>Label-Dedication</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1314</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug13...</td>\n",
-       "      <td>Label-Acknowledgement</td>\n",
+       "      <th>998</th>\n",
+       "      <td>/home/mchou001/Label-Dedication/502/aug998.png</td>\n",
+       "      <td>Label-Dedication</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1315</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug13...</td>\n",
-       "      <td>Label-Acknowledgement</td>\n",
+       "      <th>999</th>\n",
+       "      <td>/home/mchou001/Label-Dedication/502/aug999.png</td>\n",
+       "      <td>Label-Dedication</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1316</th>\n",
-       "      <td>/home/mchou001/Label-Acknowledgement/501/aug13...</td>\n",
-       "      <td>Label-Acknowledgement</td>\n",
+       "      <th>1000</th>\n",
+       "      <td>/home/mchou001/Label-Dedication/502/aug1000.png</td>\n",
+       "      <td>Label-Dedication</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1317 rows × 2 columns</p>\n",
+       "<p>1001 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               filename                  class\n",
-       "0     /home/mchou001/Label-Acknowledgement/501/aug0.png  Label-Acknowledgement\n",
-       "1     /home/mchou001/Label-Acknowledgement/501/aug1.png  Label-Acknowledgement\n",
-       "2     /home/mchou001/Label-Acknowledgement/501/aug2.png  Label-Acknowledgement\n",
-       "3     /home/mchou001/Label-Acknowledgement/501/aug3.png  Label-Acknowledgement\n",
-       "4     /home/mchou001/Label-Acknowledgement/501/aug4.png  Label-Acknowledgement\n",
-       "...                                                 ...                    ...\n",
-       "1312  /home/mchou001/Label-Acknowledgement/501/aug13...  Label-Acknowledgement\n",
-       "1313  /home/mchou001/Label-Acknowledgement/501/aug13...  Label-Acknowledgement\n",
-       "1314  /home/mchou001/Label-Acknowledgement/501/aug13...  Label-Acknowledgement\n",
-       "1315  /home/mchou001/Label-Acknowledgement/501/aug13...  Label-Acknowledgement\n",
-       "1316  /home/mchou001/Label-Acknowledgement/501/aug13...  Label-Acknowledgement\n",
+       "                                             filename             class\n",
+       "0        /home/mchou001/Label-Dedication/502/aug0.png  Label-Dedication\n",
+       "1        /home/mchou001/Label-Dedication/502/aug1.png  Label-Dedication\n",
+       "2        /home/mchou001/Label-Dedication/502/aug2.png  Label-Dedication\n",
+       "3        /home/mchou001/Label-Dedication/502/aug3.png  Label-Dedication\n",
+       "4        /home/mchou001/Label-Dedication/502/aug4.png  Label-Dedication\n",
+       "...                                               ...               ...\n",
+       "996    /home/mchou001/Label-Dedication/502/aug996.png  Label-Dedication\n",
+       "997    /home/mchou001/Label-Dedication/502/aug997.png  Label-Dedication\n",
+       "998    /home/mchou001/Label-Dedication/502/aug998.png  Label-Dedication\n",
+       "999    /home/mchou001/Label-Dedication/502/aug999.png  Label-Dedication\n",
+       "1000  /home/mchou001/Label-Dedication/502/aug1000.png  Label-Dedication\n",
        "\n",
-       "[1317 rows x 2 columns]"
+       "[1001 rows x 2 columns]"
       ]
      },
      "execution_count": 6,
@@ -194,6 +194,13 @@
    "source": [
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
