--- a/etd_segmentation/src/augmentation/ETDaugmentation.ipynb
+++ b/etd_segmentation/src/augmentation/ETDaugmentation.ipynb
@@ -31,30 +31,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The function below will sort the files in numberical order \n",
-    "numbers = re.compile(r'(\\d+)')\n",
-    "def numericalSort(value):\n",
-    "    parts = numbers.split(value)\n",
-    "    parts[1::2] = map(int, parts[1::2])\n",
-    "    return parts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "etd_path = sorted(glob.glob('/home/mchou001/etds_json/*.json'), key = numericalSort)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "class Preprocessor:\n",
+    "    \n",
+    "    # The function below will sort the files in numberical order \n",
+    "    def numericalSort(self, value):\n",
+    "        self.numbers = re.compile(r'(\\d+)')\n",
+    "        self.value = value\n",
+    "        parts = self.numbers.split(self.value)\n",
+    "        parts[1::2] = map(int, parts[1::2])\n",
+    "        return parts\n",
     "    \n",
     "    ## the function will return parsed lines from json files\n",
     "    def json_text_parser(self, json_files):\n",
@@ -93,6 +78,19 @@
     "                    list_bbox.append(bbox_text)\n",
     "        \n",
     "        return list_bbox\n",
+    "    \n",
+    "    ## the function will convert label.txt file to .csv file and includes a header\n",
+    "    def label_process(self, label_text_file):\n",
+    "        self.label_text_file = label_text_file\n",
+    "        dfList=[]\n",
+    "        colname=['file_id', 'labels']\n",
+    "        df = pd.read_csv(label_text_file, sep = \"\\t\", header = None)\n",
+    "        dfList.append(df)\n",
+    "        concatDf = pd.concat(dfList, axis =0)\n",
+    "        concatDf.columns=colname\n",
+    "        concatDf.to_csv(\"labels.csv\",index = None, encoding = 'utf-8')\n",
+    "    \n",
+    "        return concatDf\n",
     "    \n",
     "    '''\n",
     "    We are using 'ast' module for preprocessing task of the class labels.\n",
@@ -136,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,46 +188,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'numbers' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-050deccd572a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0metd_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/home/mchou001/etds_json/*.json'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumericalSort\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0metd_lines\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson_text_parser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0metd_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-bae3280b8a51>\u001b[0m in \u001b[0;36mnumericalSort\u001b[0;34m(self, value)\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mnumericalSort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumbers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnumbers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m         \u001b[0mparts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumbers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mparts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'numbers' is not defined"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    \n",
     "    parser = Preprocessor()\n",
     "    \n",
+    "    \n",
+    "    etd_path = sorted(glob.glob('/home/mchou001/etds_json/*.json'), key = parser.numericalSort)\n",
+    "    \n",
     "    etd_lines = parser.json_text_parser(etd_path)\n",
-    "    etd_bbox = parser.json_bbox_parser(etd_path)\n",
-    "    labels_ = pd.read_csv(\"labels.csv\", encoding = 'utf-8')\n",
+    "    labels_ = parser.label_process(\"labels.txt\")\n",
+    "    \n",
+    "    etd_label = pd.read_csv(\"labels.csv\")\n",
     "    etd_label = labels_['labels']\n",
     "    file_id = labels_['file_id']\n",
-    "    res_list = [list(item) for item in list(zip(file_id, etd_lines, etd_bbox, etd_label))]\n",
-    "    dataframe = pd.DataFrame(res_list, columns = ['file_idx', 'text', 'bbox', 'class'])\n",
-    "    dataframe.to_csv('ETD_aug.csv', index = False)\n",
-    "       \n",
-    "#     ## General Abstract ##\n",
-    "#     label_gabs = df1.loc[\"Label-GeneralAbstract\"]\n",
-    "#     phrase_gabs = label_gabs['text']\n",
-    "#     text0 = ast.literal_eval(phrase_gabs[0])\n",
-    "#     text1 = ast.literal_eval(phrase_gabs[1])\n",
-    "#     text2 = ast.literal_eval(phrase_gabs[2])\n",
-    "#     text3 = ast.literal_eval(phrase_gabs[3])\n",
-    "#     phrases_gabs = (\" \").join(text0) + (\" \").join(text1) + (\" \").join(text2) + (\" \").join(text3)\n",
-    "#     gabs = parser.preprocess_gabs(phrases_gabs)\n",
-    "#     gabs_paraphrase = augmentation.paraphrased_text(gabs)\n",
-    "#     gabs_text_wrap = augmentation.wrap_text(gabs_paraphrase)\n",
-    "#     gabs_title = \"\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tSUMMARY\\n\" + gabs_text_wrap\n",
     "    \n",
-    "#     ## Abstract\n",
-    "#     label_abs = df1.loc[\"Label-Abstract\"]\n",
-    "#     phrases_abs = label_abs['text']\n",
-    "#     abstract = parser.preprocess_abs(phrases_abs[775])\n",
-    "#     abstract_paraphrase = augmentation.paraphrased_text(abstract)\n",
-    "#     abstract_text_wrap = augmentation.wrap_text(abstract_paraphrase)\n",
-    "#     #print(abstract_text_wrap)\n",
-    "#     abs_title = \"\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tAbstract\\n\" + abstract_text_wrap\n",
-    " "
+    "    res_list = [list(item) for item in list(zip(file_id, etd_lines, etd_label))]\n",
+    "    dataframe = pd.DataFrame(res_list, columns = ['file_idx', 'text', 'class'])\n",
+    "    dataframe.to_csv('ETD_aug.csv', index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
