augmentation file updated

--- a/etd_segmentation/src/augmentation/ETDaugmentation.ipynb
+++ b/etd_segmentation/src/augmentation/ETDaugmentation.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "class Preprocessor:\n",
     "    \n",
-    "    # The function below will sort the files in numberical order \n",
+    "    # the function below will sort the files in numberical order \n",
     "    def numericalSort(self, value):\n",
     "        self.numbers = re.compile(r'(\\d+)')\n",
     "        self.value = value\n",
@@ -100,14 +100,16 @@
     "    The preprocessing functions for each classes returns a list.\n",
     "    '''\n",
     "    \n",
+    "    ## preprocess Dedication\n",
     "    def preprocess_dedication(self, dedication_):\n",
     "        self.dedication_ = dedication_\n",
     "        text_dedication = ast.literal_eval(self.dedication_)\n",
     "        text_dedication = (\" \").join(text_dedication)\n",
     "        splitter = SentenceSplitter(language='en')\n",
     "        dedication_list = splitter.split(text_dedication)\n",
-    "        return dedication_list    \n",
+    "        return dedication_list\n",
     "    \n",
+    "    ## preprocess Acknowledgement\n",
     "    def preprocess_ack(self, acknowledgement_):\n",
     "        self.acknowledgement_ = acknowledgement_\n",
     "        text_ack = ast.literal_eval(self.acknowledgement_)\n",
@@ -116,19 +118,22 @@
     "        ack_list = splitter.split(text_ack)\n",
     "        return ack_list\n",
     "    \n",
+    "    ## preprocess General Abstract\n",
     "    def preprocess_gabs(self, general_abs):\n",
     "        self.general_abs = general_abs\n",
     "        splitter = SentenceSplitter(language='en')\n",
     "        gabs_list = splitter.split(self.general_abs)\n",
     "        return gabs_list\n",
     "    \n",
-    "    def preprocess_abs(self, abstract_):\n",
+    "    \n",
+    "    ## preprocess Chapter Abstract or Abstract\n",
+    "    def preprocess_cabs_abs(self, abstract_):\n",
     "        self.abstract_ = abstract_\n",
     "        text_abstract = ast.literal_eval(self.abstract_)\n",
     "        text_abstract = (\" \").join(text_abstract)\n",
     "        splitter = SentenceSplitter(language='en')\n",
     "        abstract_list = splitter.split(text_abstract)\n",
-    "        return abstract_list  \n",
+    "        return abstract_list\n",
     "        "
    ]
   },
@@ -162,7 +167,7 @@
     "        batch = tokenizer.prepare_seq2seq_batch([self.input_text],truncation=True,padding='longest',max_length=60, return_tensors=\"pt\").to(torch_device)\n",
     "        translated = model.generate(**batch,max_length=60,num_beams=10, num_return_sequences=self.num_return_sequences, temperature=1.5)\n",
     "        paraphrased_text = tokenizer.batch_decode(translated, skip_special_tokens=True)\n",
-    "        return paraphrased_text       \n",
+    "        return paraphrased_text\n",
     "    \n",
     "    def paraphrased_text(self, class_text_list):\n",
     "        self.class_text_list = class_text_list\n",
@@ -183,7 +188,7 @@
     "        string = ''\n",
     "        for ele in new_phrase[0:]:\n",
     "            string = string + ele + '\\n'\n",
-    "        return string       "
+    "        return string "
    ]
   },
   {
